# lex

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .release-sync-state.yaml  .shipit.toml  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  claude-start  handbook.lex  lefthook.yml  multi-repo-bootstrap-plan.md  pixi.toml  readme.lex  release.toml  tree-sitter-plan.md
crates/lex-analysis/: Cargo.toml
crates/lex-analysis/src/: annotations.rs  completion.rs  diagnostics.rs  document_symbols.rs  folding_ranges.rs  go_to_definition.rs  hover.rs  inline.rs  label_dispatch.rs  lib.rs  reference_targets.rs  references.rs  semantic_tokens.rs  spellcheck.rs  test_support.rs  utils.rs
crates/lex-analysis/src/diagnostics/: annotations.rs  footnotes.rs  labels.rs  references.rs  tables.rs  tests.rs
crates/lex-analysis/tests/: test_inline_reference_markers.rs
crates/lex-analysis/tests/integration/: main.rs  test_definition_reference_markers.rs  test_inline_reference_markers.rs
crates/lex-babel/: Cargo.toml  README.lex
crates/lex-babel/css/: baseline.css
crates/lex-babel/src/: format.rs  lib.rs  render_dispatch.rs
crates/lex-babel/src/common/: flat_to_nested.rs  links.rs  mod.rs  nested_to_flat.rs  splice.rs
crates/lex-babel/src/ir/: anchoring.rs  events.rs  from_lex.rs  mod.rs  nodes.rs  to_lex.rs  to_wire.rs
crates/lex-babel/src/render_dispatch/: tests.rs
crates/lex-babel/src/templates/: asset.rs  verbatim.rs
crates/lex-babel/tests/: lib.rs  round_trip_proptest.rs
crates/lex-babel/tests/common/: mod.rs
crates/lex-babel/tests/format_invariants/: mod.rs
crates/lex-babel/tests/html/: export.rs  table.rs
crates/lex-babel/tests/ir_round_trip_proptest/: mod.rs
crates/lex-babel/tests/lex_separation/: matrix.rs  mod.rs
crates/lex-babel/tests/markdown/: annotations.rs  export.rs  faithfulness_fixtures.rs  import.rs  mod.rs  table.rs
crates/lex-babel/tests/round_trip_proptest/: mod.rs
crates/lex-babel/tests/skeleton/: mod.rs
crates/lex-cli/: Cargo.toml  build.rs
crates/lex-cli/completions/: lex.bash
crates/lex-cli/src/: check.rs  cli.rs  cli_support.rs  commands.rs  extension_setup.rs  help.rs  labels_subcommand.rs  lib.rs  main.rs  transforms.rs
crates/lex-cli/src/commands/: check.rs  config.rs  convert.rs  inspect.rs  labels.rs  misc.rs  query.rs
crates/lex-cli/src/transforms/: ast_json.rs  ir.rs  parity.rs  semantic.rs  tests.rs  tokens.rs
crates/lex-cli/tests/: element_at.rs  format_config.rs  nodemap.rs  pdf.rs  stdin_input.rs  theme_config.rs
crates/lex-cli/tests/integration/: check.rs  config_gen.rs  includes.rs  labels.rs  main.rs  markdown_import.rs  mojibake.rs  nodemap.rs  pdf.rs  stdin_input.rs
crates/lex-config/: Cargo.toml
crates/lex-config/src/: include_paths.rs  lib.rs  rule_config.rs
crates/lex-core/: Cargo.toml
crates/lex-core/benches/: include_resolve.rs  parse_vs_markdown.rs
crates/lex-core/benches/corpus/: gen.py
crates/lex-core/benches/md_corpus/: prep.py
crates/lex-core/src/: lex.rs  lib.rs
crates/lex-core/src/lex/: anchoring.rs  annotation.rs  assembling.rs  ast.rs  building.rs  escape.rs  formats.rs  includes.rs  inlines.rs  lexing.rs  migrate.rs  mojibake.rs  parsing.rs  testing.rs  token.rs  transforms.rs
crates/lex-core/tests/: compile_fail.rs  doc_collections.rs  elements_annotations.rs  elements_lists.rs  elements_paragraphs.rs  elements_table.rs  elements_verbatim.rs  escape_proptest.rs  lex_integrations.rs  lexer_proptest.proptest-regressions  location_integrity.rs  parameter_proptest.proptest-regressions  parser.rs  parser_kitchensink.rs  parser_proptest.rs  proptest_invariants.rs  proptest_references.rs  proptest_table_cells.rs  proptest_table_config.rs  proptest_verbatim.rs  spec_documents.rs  split_respecting_escape_proptest.proptest-regressions  split_respecting_escape_proptest.rs  table_escape_integration.rs  test_blank_line_group_parsing.rs  tokenizer_documents.rs  tokenizer_elements.rs
crates/lex-core/tests/compile_fail/: container_type_safety.rs  container_type_safety.stderr
crates/lex-core/tests/detokenizer/: main.rs
crates/lex-core/tests/fixtures/: treeviz_expected_body.txt
crates/lex-core/tests/integration/: elements_annotations.rs  elements_sessions.rs  elements_table.rs  elements_verbatim.rs  integration_test.rs  location_integrity.rs  main.rs  parser_kitchensink.rs  parser_regression.rs  reference_anchoring.rs  runtime_type_safety.rs  spec_documents.rs  spec_validation.rs  test_bug.rs  verbatim_dual.rs  verbatim_span_bounds.rs
crates/lex-core/tests/proptests/: lexer_proptest.rs  main.rs  parameter_proptest.rs  parser_correctness_proptest.rs  parser_proptest.rs  proptest_inline_edge_cases.rs  proptest_table_wire_align.rs  split_respecting_escape_proptest.rs
crates/lex-core/tests/snapshots/: parser_kitchensink__parser_kitchensink_snapshot.snap  (+36 more)
crates/lex-engine/: Cargo.toml
crates/lex-engine/src/: lib.rs  setup.rs
crates/lex-extension/: Cargo.toml
crates/lex-extension-host/: Cargo.toml
crates/lex-extension-host/src/: lib.rs  registry.rs  resolve.rs
crates/lex-extension-host/tests/: git_fetcher_e2e.rs  git_fetcher_no_path.rs  https_fetcher_e2e.rs  resolver_github_e2e.rs  resolver_gitlab_e2e.rs  resolver_http_e2e.rs  sandbox_enforcement.rs  subprocess.rs
crates/lex-extension/src/: handler.rs  lib.rs  schema.rs
crates/lex-fmt/: Cargo.toml
crates/lex-fmt/src/: diag_rules.rs  engine.rs  lib.rs  prompts.rs  setup.rs
crates/lex-fmt/tests/: engine_pipeline.rs
crates/lex-lsp/: COMMANDS.md  Cargo.toml  commands.json
crates/lex-lsp-core/: Cargo.toml
crates/lex-lsp-core/src/: available_actions.rs  document_links.rs  footnotes.rs  formatting.rs  lib.rs  prepare_paste.rs  table_format.rs
crates/lex-lsp/src/: extension_dispatch.rs  lib.rs  server.rs  trust_prompt.rs
crates/lex-lsp/tests/: cli.rs  robustness_proptest.proptest-regressions  robustness_proptest.rs
crates/lex-wasm/: Cargo.toml  README.md
crates/lex-wasm/src/: conversions.rs  document.rs  lib.rs  spellcheck.rs
crates/lex-wasm/typescript/: index.ts  types.ts
(+541 files in other folders)
