[workspace]
members = [
    "crates/lex-core",
    "crates/lex-babel",
    "crates/lex-config",
    "crates/lex-cli",
    "crates/lex-analysis",
    "crates/lex-lsp",
    "crates/lex-wasm",
]
resolver = "2"

[workspace.dependencies]
lex-core = { version = "0.9.0", path = "crates/lex-core" }
lex-babel = { version = "0.9.0", path = "crates/lex-babel", default-features = true }
lex-config = { version = "0.9.0", path = "crates/lex-config" }
lex-analysis = { version = "0.9.0", path = "crates/lex-analysis" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.6", features = ["derive"] }
clapfig = "0.17"
confique = { version = "0.4", features = ["toml"] }
insta = "1.47"
tokio = { version = "1", features = ["full"] }
proptest = "1.11"
lsp-types = "0.97"
tempfile = "3"
regex = "1.12.2"
once_cell = "1.21"
pathdiff = "0.2"

[profile.dist]
inherits = "release"
lto = "thin"
