[workspace]
members = [
    "crates/lex-core",
    "crates/lex-babel",
    "crates/lex-config",
    "crates/lex-cli",
    "crates/lex-analysis",
    "crates/lex-extension",
    "crates/lex-extension-host",
    "crates/lex-fmt",
    "crates/lex-lsp-core",
    "crates/lex-lsp",
    "crates/lex-wasm",
]
resolver = "2"

[workspace.dependencies]
lex-core = { version = "0.19.10", path = "crates/lex-core" }
lex-babel = { version = "0.19.10", path = "crates/lex-babel", default-features = false }
lex-config = { version = "0.19.10", path = "crates/lex-config" }
lex-analysis = { version = "0.19.10", path = "crates/lex-analysis" }
lex-extension = { version = "0.19.10", path = "crates/lex-extension" }
lex-extension-host = { version = "0.19.10", path = "crates/lex-extension-host", default-features = false }
lex-fmt = { version = "0.19.10", path = "crates/lex-fmt" }
lex-lsp-core = { version = "0.19.10", path = "crates/lex-lsp-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.6", features = ["derive"] }
clapfig = { version = "0.21.4", features = ["derive"] }
confique = { version = "0.4", features = ["toml"] }
insta = "1.47"
tokio = { version = "1", features = ["full"] }
proptest = "1.11"
lsp-types = "0.94"
tempfile = "3"
regex = "1.12.2"
once_cell = "1.21"
pathdiff = "0.2"
comrak = "0.29"
sha2 = "0.10"
url = "2.4"

[profile.dist]
inherits = "release"
lto = "thin"
