[package]
name = "lex-analysis"
version = "0.8.0"
edition = "2021"
authors = ["lex contributors"]
description = "Semantic analysis for the lex format"
license = "MIT"
repository = "https://github.com/lex-fmt/lex"
keywords = ["analysis", "semantic", "lex", "lsp"]
categories = ["text-processing", "development-tools"]

[lib]
doctest = false

[features]
test-support = []

[dependencies]
ignore = "0.4"
lex-core = { workspace = true }
lsp-types = { workspace = true }
pathdiff = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
