[package]
name = "lex-analysis"
version = "0.19.0"
edition = "2021"
authors = ["lex contributors"]
description = "Semantic analysis for the lex format"
license = "MIT"
repository = "https://github.com/lex-fmt/lex"
keywords = ["analysis", "semantic", "lex", "lsp"]
categories = ["text-processing", "development-tools"]

[lib]
doctest = false

[features]
test-support = []

[dependencies]
ignore = "0.4"
lex-config = { workspace = true }
lex-core = { workspace = true }
lex-extension = { workspace = true }
lex-extension-host = { workspace = true }
lsp-types = { workspace = true }
pathdiff = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
