[package]
name = "lex-babel"
version = "0.19.9-rc.1"
edition = "2021"
authors = ["lex contributors"]
description = "Format conversion library for the lex format"
license = "MIT"
repository = "https://github.com/lex-fmt/lex"
keywords = ["format", "conversion", "lex", "markdown", "html"]
categories = ["text-processing"]

[lib]
doctest = false

[features]
default = ["native-export"]
native-export = ["tempfile", "which"]

[dependencies]
lex-core = { workspace = true }
lex-extension = { workspace = true }
lex-extension-host = { workspace = true }
serde_json = { workspace = true }
comrak = { workspace = true }
html5ever = "0.38"
markup5ever_rcdom = "0.38"
serde = { workspace = true }
tempfile = { workspace = true, optional = true }
which = { version = "8", optional = true }
url = { workspace = true }
pathdiff = { workspace = true }
roxmltree = "0.21"
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
