[package]
name = "lex-config"
version = "0.14.0"
edition = "2021"
license = "MIT"
authors = ["lex contributors"]
description = "Shared configuration loading for the lex toolchain"
repository = "https://github.com/lex-fmt/lex"
keywords = ["config", "lex"]
categories = ["config"]

[dependencies]
confique = { workspace = true }
serde = { workspace = true }
toml = "0.8"
lex-babel = { workspace = true }

[dev-dependencies]
clapfig = { workspace = true }
tempfile = { workspace = true }
