[package]
name = "lex-core"
version = "0.12.0"
edition = "2021"
authors = ["lex contributors"]
description = "Parser library for the lex format"
license = "MIT"
repository = "https://github.com/lex-fmt/lex"
keywords = ["parser", "format", "lex"]
categories = ["parsing", "text-processing"]

[lib]
# Disable doctests for the library; docs contain lex examples that aren't Rust
doctest = false

[features]
# Expose test fixtures (MemoryLoader, etc.) so downstream crates' tests can
# exercise APIs that take injected dependencies.
test-support = []

[dependencies]
logos = "0.16"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
polymath-rs = "0.1.2"
lex-extension = { workspace = true }
# Native built-ins only; opt out of the subprocess transport (and its
# tokio dep). CLI/LSP consumers re-enable it via their own dep.
lex-extension-host = { workspace = true, default-features = false }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
trybuild = "1.0"
tempfile = { workspace = true }
criterion = "0.5"
comrak = { workspace = true }

[[bench]]
name = "include_resolve"
harness = false

[[bench]]
name = "parse_vs_markdown"
harness = false
