[package]
name = "lex-extension-host"
version = "0.12.0"
edition = "2021"
license = "MIT"
authors = ["lex contributors"]
description = "Runtime for the Lex extension system: registry, transports, trust gate, sandboxing"
repository = "https://github.com/lex-fmt/lex"
keywords = ["lex", "extension"]
categories = ["text-processing"]

[features]
# subprocess: enable the JSON-RPC-over-stdio subprocess transport (PR 5).
# Drags `tokio` into the dep graph; gated so `lex-core` (native built-ins
# only) stays lean. CLI/LSP consumers opt in.
default = ["subprocess"]
subprocess = ["dep:tokio"]

[dependencies]
lex-extension = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, optional = true }

# Linux sandbox impl: seccomp-bpf for syscall filtering (network deny)
# + landlock for filesystem allowlist. Both crates are MIT/Apache,
# maintained upstream (AWS / ANSSI), and work on every Linux arch we
# build on. Pulled in only on Linux targets.
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5"
landlock = "0.4"

# Shared platform dep: libc is used in pre_exec hooks by both the
# Linux (prctl, write) and macOS (sandbox_init FFI declaration,
# write) sandbox impls.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

# Subprocess test fixture: a single binary with several behavioural modes
# (echo, slow, crash, malformed, version-mismatch). Built only when the
# subprocess feature is on so the fixture isn't compiled into native-only
# consumers (`cargo install lex-core`).
[[bin]]
name = "lex-extension-host-fixture-handler"
path = "tests/fixtures/fixture_handler.rs"
required-features = ["subprocess"]

# Sandbox test fixtures: standalone binaries that attempt one privileged
# operation each and exit with a known code. Spawned directly via
# `std::process::Command` with a `Sandbox` impl applied. Same feature
# gating as the JSON-RPC fixture above — built only as part of the
# subprocess-test toolchain.
[[bin]]
name = "lex-extension-host-fixture-fs-probe"
path = "tests/fixtures/fs_probe.rs"
required-features = ["subprocess"]

[[bin]]
name = "lex-extension-host-fixture-net-probe"
path = "tests/fixtures/net_probe.rs"
required-features = ["subprocess"]
