[package]
name = "lex-extension-host"
version = "0.19.7-rc.1"
edition = "2021"
license = "MIT"
authors = ["lex contributors"]
description = "Runtime for the Lex extension system: registry, transports, trust gate, sandboxing"
repository = "https://github.com/lex-fmt/lex"
keywords = ["lex", "extension"]
categories = ["text-processing"]

[features]
# subprocess: enable the JSON-RPC-over-stdio subprocess transport (PR 5).
# Drags `tokio` into the dep graph; gated so `lex-core` (native built-ins
# only) stays lean. CLI/LSP consumers opt in.
default = ["subprocess", "https-fetcher"]
subprocess = ["dep:tokio"]

# https-fetcher: enable the real HttpsFetcher implementation (#649).
# Drags `ureq` (rustls + ring + getrandom), `flate2`, `tar`, and `zip`
# into the dep graph. Notably `ring`'s `getrandom 0.2` does not compile
# to `wasm32-unknown-unknown` without the `js` feature, which would
# require a tokio runtime in the resolver path. Gating the feature lets
# wasm consumers (lex-wasm via lex-core) skip the chain entirely.
# CLI/LSP consumers opt in; with the feature off, HttpsFetcher::fetch
# returns FetchError::Unimplemented.
https-fetcher = ["dep:ureq", "dep:flate2", "dep:tar", "dep:zip", "dep:tempfile"]

[dependencies]
lex-extension = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, optional = true }

# HTTPS fetcher (resolve::HttpsFetcher), feature-gated via `https-fetcher`:
# - `ureq` — sync HTTP client; keeps tokio off the resolver boot path.
#   `tls` feature pulls in rustls + webpki-roots (Mozilla CA bundle),
#   so HTTPS works out of the box on every supported platform without
#   linking the system OpenSSL.
# - `flate2` + `tar` — extract gzipped tarballs (the GitHub/GitLab
#   tarball-API and any standard `.tar.gz` artifact server).
# - `zip` — extract `.zip` archives (some internal artifact servers).
#
# Made optional so the wasm32-unknown-unknown target (lex-wasm via
# lex-core's `default-features = false` dependency) doesn't drag in
# `ring`/`getrandom 0.2`, which don't compile to wasm32 without `js`.
# CLI/LSP consumers explicitly enable the feature.
ureq = { version = "2.11", default-features = false, features = ["tls"], optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
zip = { version = "2.2", default-features = false, features = ["deflate"], optional = true }
# `tempfile` is also a dev-dep; runtime use is the HttpsFetcher streaming
# the response body to a NamedTempFile rather than buffering up to
# 256 MiB in a Vec.
tempfile = { workspace = true, optional = true }

# Linux sandbox impl: seccomp-bpf for syscall filtering (network deny)
# + landlock for filesystem allowlist. Both crates are MIT/Apache,
# maintained upstream (AWS / ANSSI), and work on every Linux arch we
# build on. Pulled in only on Linux targets.
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5"
landlock = "0.4"

# Shared platform dep: libc is used in pre_exec hooks by both the
# Linux (prctl, write) and macOS (sandbox_init FFI declaration,
# write) sandbox impls.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

# Subprocess test fixture: a single binary with several behavioural modes
# (echo, slow, crash, malformed, version-mismatch). Built only when the
# subprocess feature is on so the fixture isn't compiled into native-only
# consumers (`cargo install lex-core`).
[[bin]]
name = "lex-extension-host-fixture-handler"
path = "tests/fixtures/fixture_handler.rs"
required-features = ["subprocess"]

# Sandbox test fixtures: standalone binaries that attempt one privileged
# operation each and exit with a known code. Spawned directly via
# `std::process::Command` with a `Sandbox` impl applied. Same feature
# gating as the JSON-RPC fixture above — built only as part of the
# subprocess-test toolchain.
[[bin]]
name = "lex-extension-host-fixture-fs-probe"
path = "tests/fixtures/fs_probe.rs"
required-features = ["subprocess"]

[[bin]]
name = "lex-extension-host-fixture-net-probe"
path = "tests/fixtures/net_probe.rs"
required-features = ["subprocess"]
