[package]
name = "lex-extension"
version = "0.19.6-release-rc"
edition = "2021"
license = "MIT"
authors = ["lex contributors"]
description = "Public surface for Lex extensions: handler trait, wire types, schema types"
repository = "https://github.com/lex-fmt/lex"
keywords = ["lex", "extension"]
categories = ["text-processing"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
