[package]
name = "lex-fmt"
version = "0.11.0"
edition = "2021"
authors = ["lex contributors"]
description = "Canonical Rust embedder API for the lex document format. Hosts Engine::builder() plus the boot helpers shared by lexd and lexd-lsp."
license = "MIT"
repository = "https://github.com/lex-fmt/lex"
keywords = ["lex", "document", "embedder"]
categories = ["development-tools"]

[lib]
doctest = false

[dependencies]
lex-core = { workspace = true }
lex-config = { workspace = true }
lex-extension = { workspace = true }
lex-extension-host = { workspace = true, features = ["subprocess"] }

[dev-dependencies]
tempfile = { workspace = true }
