[package]
name = "lex-fmt"
version = "0.14.2-rc.1"
edition = "2021"
authors = ["lex contributors"]
description = "Canonical Rust embedder API for the lex document format. Hosts Engine::builder() plus the boot helpers shared by lexd and lexd-lsp."
license = "MIT"
repository = "https://github.com/lex-fmt/lex"
keywords = ["lex", "document", "embedder"]
categories = ["development-tools"]

[lib]
doctest = false

[features]
default = []
# Pulls in lex-babel's PDF/PNG renderers (transitively: printpdf,
# image, etc.). Off by default to keep the embedder dep tree small;
# opt in if you need binary output from `Engine::render`.
native-export = ["lex-babel/native-export"]

[dependencies]
lex-core = { workspace = true }
lex-config = { workspace = true }
lex-extension = { workspace = true }
lex-extension-host = { workspace = true, features = ["subprocess", "https-fetcher"] }
lex-babel = { workspace = true }
lex-analysis = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_yaml = { workspace = true }
