[package]
name = "lexd-lsp"
version = "0.9.0-rc.1"
edition = "2021"
authors = ["lex contributors"]
description = "Language Server Protocol implementation for the lex format"
license = "MIT"
repository = "https://github.com/lex-fmt/lex"
keywords = ["lsp", "language-server", "lex", "editor"]
categories = ["development-tools", "text-editors"]

[lib]
doctest = false

[[bin]]
name = "lexd-lsp"
path = "src/bin/lexd-lsp.rs"

[dependencies]
lex-core = { workspace = true }
lex-analysis = { workspace = true }
lex-babel = { workspace = true }
lex-config = { workspace = true }
clapfig = { workspace = true }
tower-lsp = "0.20"
lsp-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
lex-analysis = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }
proptest = { workspace = true }
