[package]
name = "lex-wasm"
version = "0.9.0"
edition = "2021"
authors = ["lex contributors"]
description = "WASM bindings for Lex language analysis"
license = "MIT"
repository = "https://github.com/lex-fmt/lex"
keywords = ["wasm", "lex", "lsp", "editor", "monaco"]
categories = ["wasm", "text-editors", "development-tools"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lex-core = { workspace = true }
lex-analysis = { workspace = true }
lex-babel = { workspace = true, default-features = false }
lsp-types = { workspace = true }
spellbook = "0.3"
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
